welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:3: error: not found: value x
	(x,y) match
         ^caughtSpeeding:3: error: not found: value y
	(x,y) match
           ^caughtSpeeding:5: error: value < is not a member of Any
		case(x,y) if((x<60 && y==false) || (x<65 &&y==true)) => return 0
                               ^caughtSpeeding:6: error: value > is not a member of Any
		case(x,y) if((x>60 && x<81 && y==false) || (x>65 && x<86 && y=true)) => return 1
                               ^caughtSpeeding:7: error: value > is not a member of Any
		case(x,y) if((x>81 && y==false ) || (x>86 && y==true) ) => return 2
                               ^